--- a/assets/scss/components/citadel/cards/_cards.scss
+++ b/assets/scss/components/citadel/cards/_cards.scss
@@ -52,7 +52,7 @@
         width: auto;
         height: auto;
         display: block;
-        z-index: 1;
+        z-index: 2;
         background-color: #ffffff;
         line-height: 0;
         overflow: hidden;
@@ -60,6 +60,23 @@
         opacity: 0 !important;
 
         &:hover {
+            opacity: 1 !important;
+        }
+    }
+
+    &.card-img-container-options {
+        @include pos($pos: abs, $t: -1px, $r: -1px, $b: -1px, $l: -1px);
+        width: auto;
+        height: auto;
+        display: block;
+        z-index: 1;
+        background-color: #ffffff;
+        line-height: 0;
+        overflow: hidden;
+        transition: opacity .25s ease-in-out;
+        opacity: 0 !important;
+
+        &.is-visible {
             opacity: 1 !important;
         }
     }
