--- a/templates/components/faceted-search/index.html
+++ b/templates/components/faceted-search/index.html
@@ -1,7 +1,7 @@
 <div id="facetedSearch" class="facetedSearch sidebarBlock" role="region" aria-label="{{lang 'search.faceted.label'}}">
     {{> components/faceted-search/selected-facets selected}}
 
-    <a href="#facetedSearch-navList" role="button" class="facetedSearch-toggle toggleLink" data-collapsible>
+    <a href="#facetedSearch-navList" role="button" class="facetedSearch-toggle toggleLink hide-on-tablet" data-collapsible>
         <span class="facetedSearch-toggle-text">
             {{#if facets.length '>' 2}}
                 {{lang 'search.faceted.browse-by'}} {{join (pluck facets 'title') ', ' limit=2}} &amp; {{toLowerCase (lang 'search.faceted.more')}}
